# WeTalk

./: CMakeLists.txt  build.bat  build.sh
src/client/: CMakeLists.txt  client.cpp
src/common/: CMakeLists.txt  wt_logger.h  wt_socket.cpp  wt_socket.h  wt_util.hpp
src/server/: CMakeLists.txt  server.cpp
